4)  Fix detection of Windows 2003 in smb.conf %a variable.
5)  Ensure that smbd calls the add user script for a missing UNIX 
    user on kerberos auth call  (bug 445).
6)  Fix bugs in hosts allow/deny when using a mismatched 
    network/netmask pair.
7)  Protect alloc_sub_basic() from crashing when the source string 
    is NULL (partial work on bug 687).
8)  Fix spinlocks on IRIX.
9)  Corrected some bad paths with using --with-fhs to configure.
10) Add packaging for Fedora Core 1.


Changes since 3.0.1pre3
-----------------------

Removed Parameters
  * hide local users
  
Added Parameters
  * passwd chat timeout

1)  Fix for pdbedit error code returns (bug 763).
2)  Make sure we only enumerate group mapping entries  (not 
    /etc/group) even when doing local aliases.
3)  Relax check on the pipe name in a dce/rpc bind response to work 
    around issues with establishing trusts to a Windows 2003 domain.
4)  Ensure we mangle names ending in '.' in hash2 mangling method.
5)  Correct parsing issues with munged dial string.
6)  Fix bugs in quota support for XFS.
7)  Add a cleaner method for applications that need to provide name->SID
    mappings to do this via NSS rather than having to know the
    winbindd pipe protocol.
8)  Adds a variant of the winbindd_getgroups() call called 
    winbindd_getusersids() that provides direct SID->SIDs listing of a 
    users supplementary groups. This is enough to allow non-Samba 
    applications to do ACL checking.
9)  Make sure we don't append the 'ldap suffix' when writing out the 
    'ldap XXX suffix' values in SWAT (bug 328).
10) Fix renames across file systems.
11) Ensure that items in a list of strings containing whitespace are 
    written out surrounded by single quotes.  This means that both 
    double and single quotes are now used to surround strings in 
    smb.conf (bug 481).
12) Enable SWAT to correctly determine if winbindd is running (bug 
    398).